fixed the checkbox alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -72,7 +72,6 @@ a {
 }
 
 input, textarea {
-    width: 100%;
     margin: 0px 0px 15px;
 }
 
@@ -86,4 +85,8 @@ button {
     border-color: #555B6E;
     margin: 5px 0px 15px;
     font-size: 36px;
+}
+
+#check {
+    text-align: left;
 }
